[package]
name = "zk-prover"
version = "0.0.2"
edition = "2024"
authors = ["Mikhail Antonov"]
description = "Rust wrapper around Nargo and Barretenberg to generate and verify zero-knowledge proofs using Noir circuits"
license = "MIT OR Apache-2.0"
repository = "https://github.com/allelementary/zk-prover"
readme = "README.md"
keywords = ["zk", "noir", "zero-knowledge", "proof", "barretenberg"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
flate2 = "1.0"
hex = "0.4.3"
toml = "0.7"
